--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,8 @@
       }
     ],
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@/*": ["src/*"],
-      // "./*": ["./src/components/*"]
+      "@/*": ["./src/*"],
+      "@ui/*": ["./src/components/ui/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
