--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@supabase/supabase-js": "^2.53.0",
     "@tiptap/extension-link": "^3.0.9",
     "@tiptap/react": "^3.0.9",
+    "@tiptap/extension-heading": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
