--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tiptap/extension-link": "^3.0.9",
     "@tiptap/react": "^3.0.9",
     "@tiptap/extension-heading": "^3.0.9",
+    "@tiptap/extension-underline": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
